fix footer title font size on mobile

--- a/src/sass/components/footer.scss
+++ b/src/sass/components/footer.scss
@@ -1,3 +1,7 @@
 #footer {
   padding: 5rem 0;
+
+  h5 {
+    font-size: 2.4rem;
+  }
 }
